--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,19 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/className"
+        android:layout_width="230dp"
+        android:layout_height="44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:gravity="center"
+        android:textSize="22sp"
+        android:textColor="@color/black"/>
+
+    <TextView
         android:id="@+id/dateAndTime"
         android:layout_width="230dp"
         android:layout_height="44dp"
@@ -14,7 +27,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.053" />
+        app:layout_constraintVertical_bias="0.063"
+        android:gravity="center"
+        android:textSize="14sp"
+
+        android:textColor="@color/black"/>
+
+
 
     <Button
         android:id="@+id/calledLog"
@@ -62,10 +81,16 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="133dp"
-        android:layout_height="23dp"
+        android:layout_width="250dp"
+        android:layout_height="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image" />
+        app:layout_constraintTop_toBottomOf="@+id/image"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:textSize="25sp"
+        android:textColor="@color/black"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
