--- a/app/src/main/res/layout/activity_called_log.xml
+++ b/app/src/main/res/layout/activity_called_log.xml
@@ -5,7 +5,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalledLog">
+    tools:context=".CalledLog"
+   >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints"
+        >
+
+        <ImageView
+            android:id="@+id/image"
+
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left"
+            android:scaleType="fitStart"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:srcCompat="@tools:sample/avatars"
+            tools:ignore="MissingConstraints" />
+        /LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="12dp"
+            android:gravity="right"
             android:text="Called Log"/>
 
         <TextView
@@ -24,10 +47,11 @@
             android:layout_width="250dp"
             android:layout_height="35dp"
             android:ellipsize="end"
-            android:gravity="center"
+            android:gravity="right"
+            android:layout_marginLeft="20dp"
             android:maxLines="1"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image" />
@@ -37,68 +61,28 @@
             android:layout_width="397dp"
             android:layout_height="35dp"
             android:ellipsize="end"
-            android:gravity="center"
+            android:gravity="right"
+            android:layout_marginRight="49dp"
             android:maxLines="1"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image" />
-
         <TextView
             android:id="@+id/dateAndTime"
-            android:layout_width="230dp"
+            android:layout_width="200dp"
             android:layout_height="44dp"
-            android:gravity="center"
-            android:textColor="@color/black"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.063"
+            android:gravity="right"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.063" />
-
-        <TextView
-            android:id="@+id/className"
-            android:layout_width="230dp"
-            android:layout_height="44dp"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
+            android:textColor="@color/black"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
 
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
-
-        <Button
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/next"
-            android:drawablePadding="4dp"
-            android:layout_marginRight="2dp"/>
-        <Button
-            android:id="@+id/back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/previous"
-            android:drawablePadding="4dp"
-            android:layout_marginLeft="2dp"/>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
